2008-04-23  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by Adam and Darin.

        Implement accNavigate().

        * AccessibleBase.cpp:
        (AccessibleBase::accNavigate): This method navigates between elements,
        given a start point and a direction. The directions UP, DOWN, LEFT,
        RIGHT are not are not implemented, matching Mozilla and IE. The
        directions FIRSTCHILD and LASTCHILD are only allowed from self. NEXT and
        PREVIOUS are allowed from self or any of our children.

2008-04-23  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by Adam.

        Implement accLocation().

        * AccessibleBase.cpp:
        (AccessibleBase::accLocation): Report the screen coordinates for the
        object's bounding box.

2008-04-23  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by Adam, Darin, Oliver.

        Implement get_accDefaultAction().

        * AccessibleBase.cpp:
        (AccessibleBase::get_accDefaultAction): Report the result of calling the
        object's actionVerb method.
        * English.lproj/Localizable.strings: Updated with new strings.
        * WebCoreLocalizedStrings.cpp: 
        (WebCore::AXButtonActionVerb): Return a localized string representing
        the object's default action.
        (WebCore::AXRadioButtonActionVerb): Same.
        (WebCore::AXTextFieldActionVerb): Same.
        (WebCore::AXCheckedCheckBoxActionVerb): Same
        (WebCore::AXUncheckedCheckBoxActionVerb): Same.
        (WebCore::AXLinkActionVerb): Same.

2008-04-23  Daniel Zucker  <zucker@wake3.com>

        Reviewed by Adam Roben.

        <https://bugs.webkit.org/show_bug.cgi?id=18468>

        * WebError.h:  include RetainPtr.h to fix build errors in Cairo build

2008-04-23  Daniel Zucker  <zucker@wake3.com>

        Reviewed by Adam Roben.

        Move the location of #if USE(CFNETWORK) to fix a cairo/curl build error.
        <https://bugs.webkit.org/show_bug.cgi?id=18470>

        * WebError.cpp: